--- a/.github/workflows/main_build.yaml
+++ b/.github/workflows/main_build.yaml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Build mod file
         run: |
-          Compress-Archive ./Zeepkist.Random/bin/Release/net472/package/* mod.zip
+          Compress-Archive ./Midikist/bin/Release/net472/package/* mod.zip
 
       - name:  Upload to mod.io
         uses: nickelc/upload-to-modio@v2.1.0
